# PCRegistration

./: CMakeLists.txt  PCRegistration.kdev4  README.md  icptest.kdev4  main.cpp  run-bunny.sh  run-example.sh  run-hippo.sh  run-shen_office.sh
.kdev4/: PCRegistration.kdev4  icptest.kdev4
cmake/: FindICP.cmake
include/: ICPViewer.h  pclviewer.h  super.h  superViewer.h
include/icprefine/: icprefine.h
include/super4pcs/: shared4pcs.h
include/super4pcs/io/: io_ply.h
models/: shen_office-Cloud2.ply  super4pcs_shen.ply
src/: ICPViewer.cpp  SuperViewer.cpp  icprefine.cpp  main.cpp  pclviewer.cpp  pclviewer.h  pclviewer1.cpp  pclviewer1.h  super.cpp  superViewer.cpp
src/super4pcs/: super4pcs_test.cc
src/super4pcs/accelerators/: CMakeLists.txt
src/super4pcs/algorithms/: 4pcs.cc  match4pcsBase.cc  super4pcs.cc
src/super4pcs/io/: CMakeLists.txt  io.cc
src/super4pcs/utils/: CMakeLists.txt
